fix: fix inspector CSS issue where projects component (inside inspector) in full screen have a z-index lower than component_image quality selector

--- a/core/section/css/section.less
+++ b/core/section/css/section.less
@@ -73,7 +73,7 @@
 			position: fixed;
 			// top: @top_distance;
 			left: calc(100vw - var(--inspector_width) - 0.75rem);
-			z-index: 1;
+			z-index: 2;
 
 			// prevent content from shifting left when the vertical scrollbar appears
 			overflow-y: overlay;
